--- a/style.css
+++ b/style.css
@@ -1,41 +1,114 @@
-html, body{
-  margin: 0;
-  padding: 0;
-  height: 100%;
+.screenshot-image {
+  width: 150px;
+  height: 90px;
+  border-radius: 4px;
+  border: 2px solid whitesmoke;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
+  position: absolute;
+  bottom: 5px;
+  left: 10px;
+  background: white;
+}
+
+.display-cover {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 70%;
+  margin: 5% auto;
+  position: relative;
+}
+
+video {
+  //margin: 5% auto;
   width: 100%;
+  background: rgba(0,0,0,0.2);
 }
-#camera, #camera--view, #camera--sensor, #camera--output{
-    position: fixed;
-    text-align: center;
-    height: 50%;
-    width: 50%;
-    object-fit: cover;
+
+.video-options {
+  position: absolute;
+  left: 20px;
+  top: 30px;
 }
-#camera--view, #camera--sensor, #camera--output{
-    transform: scaleX(-1);
-    filter: FlipH;
+
+.controls {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  display: flex;
+
 }
-#camera--trigger{
-    width: 200px;
-    background-color: black;
-    color: white;
-    font-size: 16px;
-    border-radius: 30px;
-    border: none;
-    padding: 15px 20px;
-    text-align: center;
-    box-shadow: 0 5px 10px 0 rgba(0,0,0,0.2);
-    position: fixed;
-    bottom: 30px;
-    left: calc(50% - 100px);
+
+.controls > button {
+  width: 45px;
+  height: 45px;
+  text-align: center;
+  border-radius: 100%;
+  margin: 0 6px;
+  background: transparent;
+
+  &:hover {
+    svg {
+      color: white !important;
+    }
+  }
 }
-.taken{
-    height: 100px!important;
-    width: 100px!important;
-    transition: all 0.5s ease-in;
-    border: solid 3px white;
-    box-shadow: 0 5px 10px 0 rgba(0,0,0,0.2);
-    top: 20px;
-    right: 20px;
-    z-index: 2;
+
+
+@media (min-width: 300px) and (max-width: 400px) {
+  .controls {
+    flex-direction: column;
+
+    button {
+      margin: 5px 0 !important;
+    }
+  }
+}
+
+.controls > button > svg {
+  height: 20px;
+  width: 18px;
+  text-align: center;
+  margin: 0 auto;
+  padding: 0;
+}
+
+.controls button:nth-child(1) {
+  border: 2px solid #D2002E;
+
+  svg {
+    color: #D2002E;
+
+  }
+}
+
+.controls button:nth-child(2) {
+  border: 2px solid #008496;
+
+  svg {
+    color: #008496;
+  }
+}
+
+.controls button:nth-child(3) {
+  border: 2px solid #00B541;
+
+  svg {
+    color: #00B541;
+  }
+}
+
+.controls > button {
+  width: 45px;
+  height: 45px;
+  text-align: center;
+  border-radius: 100%;
+  margin: 0 6px;
+  background: transparent;
+
+  &:hover {
+    svg {
+      color: white;
+    }
+  }
 }
