--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ html, body{
     object-fit: cover;
 }
 #camera--view, #camera--sensor, #camera--output{
+    -webkit-transform: scaleX(-1);
     transform: scaleX(-1);
     
 }
@@ -35,7 +36,7 @@ html, body{
     transition: all 0.5s ease-in;
     border: solid 3px white;
     box-shadow: 0 5px 10px 0 rgba(0,0,0,0.2);
-    top: 20px;
-    right: 20px;
+    top: 50px;
+    right: 50px;
     z-index: 2;
 }
